Fix spacing on profile page for small screens

--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -1,3 +1,7 @@
+.profile-left {
+    margin-bottom: 50px;
+}
+
 .detail-list {
     right: 42%;
     font-size: 1.3rem;
